Closed Bug 105397 Opened 23 years ago Closed 22 years ago

caret not displayed for text inputs using style="text-align: right" on first click

Categories

(Core :: DOM: Editor, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.3beta

People

(Reporter: caillon, Assigned: mjudge)

References

()

Details

(Keywords: access, topembed+, Whiteboard: [adt2] [ETA Needed])

Attachments

(3 files)

See Attachment 14202 [details] from bug 50758

Clicking on one of the inputs with right aligned text (the top or bottom one)
will not display the blinking cursor.

This bug is an annoying one for any text inputs of this style and gives the
appearance that the form control is perhaps disabled or has an
onfocus="onblur()" thing going.

I searched for dupes but came up empty so I'm assuming this hasn't been reported
even though it has been alluded to in the more recent comments of 50578.

For the record, I am currently on linux 2001101608.
Fixing bug 50758 will likely fix this too
Depends on: 50758
Bug 50758 should probably be marked fixed.  I don't see the problem described
there but I do see this one.
Summary: cursor not displayed for text inputs using style="text-align: right" on first click → caret not displayed for text inputs using style="text-align: right" on first click
--> mjudge (selection/caret)
Assignee: kin → mjudge
*** Bug 114546 has been marked as a duplicate of this bug. ***
layout behaviour, there is no frame being aligned in the right spot for the 
caret. marking Future.
Status: NEW → ASSIGNED
Target Milestone: --- → Future
*** Bug 118659 has been marked as a duplicate of this bug. ***
*** Bug 129032 has been marked as a duplicate of this bug. ***
We have seen this behavior as well. Although the Styles do not seem to make a
differance in what I see. On some of our JSP forms that are launched using a
JavaScript popupWindow((it just opens a new window to a certain size)) function
, the <INPUT type="text">  cannot be focused on with the cursor or edited. If I
do a view source on the page and then close the view source window and refresh
the window with the unfocusable fields.... they will then become focusable and
editable.
Comment #8 seems to be different to this bug. This bug relates only to the
cursor being invisible - the field is focusable and can be edited, but the
cursor is not displayed correctly.
Also seing this on Windows XP and Mac OS 9.
*** Bug 165745 has been marked as a duplicate of this bug. ***
We have a complaint from users in Japan that Epson Shopping
site's shopping cart page is very confusing because they cannot
see the cursor due to this bug. For fields indicating quantity 
of shopping items, aligning right should be a normal thing to do. 
Insuead of futuring this bug, we should fix this confuing bug
soon.
Changing OS to All. 
Try this page for the quantity field:

http://store.epson-supply.co.jp/query/qryfrm.asp?FrameSrc=qrylist.asp&action=query&GQ=true&PrdCls=3010000000
Severity: normal → major
OS: Linux → All
this bug can be reproduced under Windows XP, Mac OSX and Suse Linux 8.1 with
Mozilla 1.2 alpha when the inputfield is empty and style is right-aligned.

The caret becomes visible when at least one character is in the inputfield.
*** Bug 177085 has been marked as a duplicate of this bug. ***
*** Bug 139969 has been marked as a duplicate of this bug. ***
As mentioned earlier, this bug appears on Macs too.
Please change Platform to All.

Prog.
Hardware: PC → All
Keywords: topembed
Marking as nsbeta1+/topembed+ as this effects a top site in Japan (see Comment #12).
Blocks: 178882
Priority: -- → P1
Whiteboard: [adt2] [ETA Needed]
Target Milestone: Future → mozilla1.3beta
*** Bug 149281 has been marked as a duplicate of this bug. ***
*** Bug 179691 has been marked as a duplicate of this bug. ***
Attached patch PatchSplinter Review
Attachment #106254 - Flags: review?(mjudge)
Attachment #106254 - Flags: superreview?(kin)
What do you guys think of this approach which basically enforces a 1px left and
right padding on the internal div which is the thing that does the actual
clipping inside the text widget?
Comment on attachment 106254 [details] [diff] [review]
Patch

Sring for kin.
Attachment #106254 - Flags: superreview?(kin) → superreview+
Comment on attachment 106254 [details] [diff] [review]
Patch

r=kin@netscape.com - if it's cool with sfraser, it's cool with me. :-)
Attachment #106254 - Flags: review?(mjudge) → review+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
vrfy'd fixed with 2003.02.19.
Status: RESOLVED → VERIFIED
*** Bug 200253 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: