Caret not displayed in empty right-aligned text input fields. Bug 105397, r=kin, sr=sfraser.